fix side gap

--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,7 @@ main .mintform {
 
 .road-map {
     margin-top: 35px;
+    padding: 0 20px;
 }
 
 .road-map-block {
